# re-third-part

./: .gitignore  CMakeLists.txt  README.md  third-part.cmake
src/Qt/: Use.cmake
src/assimp/: Use.cmake
src/assimp/include/assimp/: material.inl
src/clang/: Use.cmake
src/clang/libs/: libclang.lib
src/cmdline/: Use.cmake
src/directx/: Use.cmake
src/eventpp/: Use.cmake
src/fmt/: Use.cmake
src/fmt/libs/x64-Debug/: fmtd.lib
src/glad/: Use.cmake  UseGlad.cmake
src/glad/src/: glad.c
src/glew-2.1.0/: Use.cmake  UseGlew.cmake
src/glfw-3.34/: Use.cmake  UseGlfw.cmake
src/glm/: Use.cmake
src/imgui/: Use.cmake  imgui.h  imgui_internal.h
src/imgui-docking/: Use.cmake  imconfig.h  imgui.h  imgui_internal.h
src/inifile/: Use.cmake
src/json/: Use.cmake
src/libuv/: Use.cmake
src/lua-5.3.4/: Use.cmake
src/luau/: Use.cmake
src/opengl/: Use.cmake  UseOpenGL.cmake
src/protable-file-dialogs/: Use.cmake
src/rapidjson-1.1/include/: Use.cmake
src/shaderc/: Use.cmake
src/sol2/: Use.cmake
src/spdlog-1.8.1/: Use.cmake
src/stb_image/: Use.cmake
src/stduuid/: Use.cmake
src/taskflow/: Use.cmake
src/test/: CMakeLists.txt  main.cpp
src/tiny-utf8/: Use.cmake
src/tiny_gltf/: Use.cmake
src/tinydir-1.2.4/: Use.cmake
src/tinyxml/: Use.cmake
src/vulkan/: Use,cmake  Use.cmake
src/windows/: Use.cmake
src/yaml-cpp/: Use.cmake
src/yaml-cpp/lib/: yaml-cpp.lib
test/test_cpm/: CMakeLists.txt  main.cpp
test/test_opengl/: CMakeLists.txt  main.cpp
test/test_taskflow/: CMakeLists.txt  main.cpp
test/test_yaml/: CMakeLists.txt  main.cpp
(+4 files in other folders)
